--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ conan_basic_setup()
 set(SOURCE source_subfolder/src/whereami.c source_subfolder/src/whereami.h)
 add_library(whereami ${SOURCE})
 target_include_directories(whereami PUBLIC source_subfolder/src)
+target_compile_features(whereami PRIVATE c_std_99)
