Require at least cmake 3.4.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.4.3)
 project(cmake_wrapper)
 
 if(EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
@@ -11,4 +11,4 @@ conan_basic_setup()
 set(SOURCE source_subfolder/src/whereami.c source_subfolder/src/whereami.h)
 add_library(whereami ${SOURCE})
 target_include_directories(whereami PUBLIC source_subfolder/src)
-target_compile_features(whereami PRIVATE c_std_99)
+set_property(TARGET whereami PROPERTY C_STANDARD 99)
