Improve recipe build
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4.3)
-project(cmake_wrapper)
+project(whereami C)
 
 if(EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
   include("${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
@@ -8,7 +8,20 @@ else()
 endif()
 conan_basic_setup()
 
-set(SOURCE source_subfolder/src/whereami.c source_subfolder/src/whereami.h)
-add_library(whereami ${SOURCE})
-target_include_directories(whereami PUBLIC source_subfolder/src)
-set_property(TARGET whereami PROPERTY C_STANDARD 99)
+if (WIN32 AND BUILD_SHARED_LIBS)
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+endif(WIN32 AND BUILD_SHARED_LIBS)
+
+set(SOURCE_FILES source_subfolder/src/whereami.c)
+set(HEADER_FILES source_subfolder/src/whereami.h)
+
+add_library(${CMAKE_PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
+target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC source_subfolder/src)
+set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 99)
+
+install(TARGETS ${CMAKE_PROJECT_NAME}
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib)
+
+install(FILES ${HEADER_FILES} DESTINATION include)
